--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,9 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@import '../node_modules/bootstrap/scss/bootstrap';
+
 html {
   box-sizing: border-box;
 }
@@ -45,7 +48,7 @@ body {
     display: block;
   }
 }
-.container {
+.mainContainer {
   position: relative;
   width: 376px;
   margin: 0 auto;
@@ -71,6 +74,8 @@ body {
   align-items: flex-start;
   @media screen and (min-width: 1440px) {
     display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
     flex-direction: row;
     flex-wrap: nowrap;
     margin: 0;
@@ -96,6 +101,9 @@ body {
   background-color: white;
   border: none;
   max-height: 40px;
+  &:focus {
+    box-shadow: none;
+  }
   @media screen and (min-width: 1440px) {
     display: none;
     background-color: transparent;
@@ -105,28 +113,19 @@ body {
   width: 40px;
   max-height: 40px;
 }
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 12px;
+}
+.closeBtnModal {
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
 .menuCloseIcon {
   width: 40px;
   max-height: 40px;
-}
-.modal {
-  position: absolute;
-  top: 100px;
-  left: 50%;
-  width: 100%;
-  transform: translateX(-50%);
-  background-color: white;
-  padding-top: 20px;
-  @media screen and (min-width: 1440px) {
-    display: flex;
-    background-color: transparent;
-    position: static;
-    transform: translateX(0);
-  }
-  @media screen and (min-width: 1920px) {
-    justify-content: space-between;
-    margin-right: 250px;
-  }
 }
 .modalMenuList {
   display: flex;
@@ -136,14 +135,14 @@ body {
   text-align: center;
   padding: 0;
   margin: 0 0 48px;
-  color: rgba(62, 75, 100, 1);
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 21px;
-  letter-spacing: 0.05em;
   &Item > a {
     text-decoration: none;
+    color: rgba(62, 75, 100, 1);
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 21px;
+    letter-spacing: 0.05em;
   }
   &Item > a:hover,
   &Item > a:focus {
@@ -175,6 +174,64 @@ body {
     }
   }
 }
+.navbar-light {
+  display: none;
+  @media screen and (min-width: 1440px) {
+    display: flex;
+  }
+}
+.navbar-light .navbar-nav .nav-link {
+  color: #3e4b64;
+  font-family: 'TT Norms Medium';
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 17px;
+  letter-spacing: 0.05em;
+  text-align: right;
+  &:hover,
+  &:focus {
+    color: #ddb04e;
+  }
+}
+.container-fluid {
+  padding: 0;
+}
+.contacts {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  @media screen and (min-width: 1440px) {
+    margin-left: 200px;
+    font-family: 'TT Norms ExtraBold';
+    display: flex;
+    flex-direction: row;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 21px;
+    letter-spacing: 0.05em;
+    text-align: right;
+  }
+  &List {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    padding: 0;
+    margin: 18px 0;
+    &Item:not(:last-child) {
+      margin-right: 15px;
+    }
+    @media screen and (min-width: 1440px) {
+      margin: 0;
+      &Item:not(:last-child) {
+        margin-right: 8px;
+      }
+    }
+  }
+}
 .tel {
   font-family: 'TT Norms ExtraBold';
   text-decoration: none;
@@ -188,6 +245,7 @@ body {
   color: #ddb04e;
   @media screen and (min-width: 1440px) {
     margin-right: 48px;
+    width: 195px;
 
     font-family: 'TT Norms ExtraBold';
     font-size: 18px;
@@ -222,40 +280,7 @@ body {
     text-align: right;
   }
 }
-.contacts {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  @media screen and (min-width: 1440px) {
-    font-family: 'TT Norms ExtraBold';
-    display: flex;
-    flex-direction: row;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 21px;
-    letter-spacing: 0.05em;
-    text-align: right;
-  }
-  &List {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-    padding: 0;
-    margin: 18px 0;
-    &Item:not(:last-child) {
-      margin-right: 15px;
-    }
-    @media screen and (min-width: 1440px) {
-      margin: 0;
-      &Item:not(:last-child) {
-        margin-right: 8px;
-      }
-    }
-  }
-}
+
 .viberIcon {
   fill: #8e24aa;
   width: 29px;
@@ -300,7 +325,7 @@ body {
   }
   &__Text {
     position: absolute;
-    top: 450px;
+    top: 500px;
     left: 10px;
     margin-left: 12px;
     font-family: 'TT Norms ExtraBold';
