--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,18 +50,15 @@ body {
 }
 .mainContainer {
   position: relative;
-  width: 376px;
+  max-width: 1440px;
   margin: 0 auto;
   @media screen and (min-width: 1440px) {
-    width: 1440px;
-
-    background-image: url('./images/bg1440.jpg');
+    max-width: 1920px;
     background-size: cover;
     background-repeat: no-repeat;
   }
   @media screen and (min-width: 1920px) {
     width: 1920px;
-    background-image: url('./images/bg1920.jpg');
     background-size: cover;
     background-repeat: no-repeat;
   }
@@ -71,10 +68,10 @@ body {
   margin-right: 12px;
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   @media screen and (min-width: 1440px) {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -101,6 +98,7 @@ body {
   background-color: white;
   border: none;
   max-height: 40px;
+  padding: 0;
   &:focus {
     box-shadow: none;
   }
@@ -112,6 +110,14 @@ body {
 .burgerMenuImg {
   width: 40px;
   max-height: 40px;
+}
+.modal-dialog {
+  margin: 0;
+  max-height: 500px;
+}
+.modal-content {
+  border: none;
+  border-radius: 0;
 }
 .modal-header {
   display: flex;
@@ -192,6 +198,7 @@ body {
   &:hover,
   &:focus {
     color: #ddb04e;
+    text-decoration: underline;
   }
 }
 .container-fluid {
@@ -311,23 +318,32 @@ body {
   margin-bottom: 30px;
 
   @media screen and (min-width: 1440px) {
+    position: relative;
     margin-bottom: 0;
+    z-index: 1;
   }
 }
 .banner {
-  margin-bottom: 50px;
-  background-image: url('./images/bg376.jpg');
-  min-height: 620px;
+  position: relative;
+  top: 68px;
+  margin-bottom: 100px;
+  background-image: url('./images/responsiveVersion/vectorsMobile.png');
+  background-repeat: no-repeat;
+  background-position: 50% 50%, 0 0;
+  background-color: rgb(62, 75, 100);
+  height: 567px;
   &__Img {
     position: relative;
     top: -65px;
     left: 0;
   }
   &__Text {
-    position: absolute;
-    top: 500px;
-    left: 10px;
-    margin-left: 12px;
+    display: inline-block;
+    position: relative;
+    top: 300px;
+    left: 25%;
+    transform: translateX(-25%);
+    width: 350px;
     font-family: 'TT Norms ExtraBold';
     color: white;
     font-size: 28px;
@@ -337,7 +353,7 @@ body {
     letter-spacing: 0.05em;
     text-align: left;
     @media screen and (min-width: 1440px) {
-      margin: 90px 0 0 150px;
+      transform: translate(-700px, 200px);
       position: static;
       width: 440px;
       max-height: 400px;
@@ -355,23 +371,55 @@ body {
     }
   }
   @media screen and (min-width: 1440px) {
-    display: flex;
-    background-image: none;
-    margin-bottom: 0;
+    top: -128px;
+    left: 60%;
+    width: 40%;
+    height: 600px;
+    display: inline-block;
+    z-index: 0;
   }
 }
-.darkBg {
-  background-image: linear-gradient(
-      to right,
-      rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 0.5)
-    ),
-    url('./images/bg376.jpg');
+.bg {
+  position: absolute;
+  top: -68px;
+  left: 75%;
+  transform: translateX(-75%);
+  height: 339px;
+  width: 311px;
+  background-image: url('./images/responsiveVersion/keysMobile.png');
+  background-repeat: no-repeat;
+  background-position: 75% 0%;
+  @media screen and (min-width: 1440px) {
+    background-image: url('./images/responsiveVersion/keysDesctop.png');
+    height: 415px;
+    width: 549px;
+    top: 0;
+    left: 0;
+    transform: translate(-114px, 134px);
+  }
+}
+.bgDots {
+  position: absolute;
+  top: 160px;
+  left: 10%;
+  transform: translateX(-25%);
+  height: 129px;
+  width: 110px;
+  background-image: url('./images/responsiveVersion/dotsMobile.png');
+  background-repeat: no-repeat;
+  background-position: 75% 0%;
+  @media screen and (min-width: 1440px) {
+    background-image: url('./images/responsiveVersion/dotsDesctop.png');
+    height: 130px;
+    width: 300px;
+    transform: translateX(200px);
+  }
 }
 .aboutSuggestionBtn {
   position: absolute;
-  bottom: -25px;
-  left: -5px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 250px);
   padding: 19px 72px;
   background-color: #ddb04e;
   font-family: 'TT Norms ExtraBold';
@@ -384,11 +432,8 @@ body {
   text-align: center;
   text-transform: uppercase;
   border: none;
-  margin-left: 20px;
   @media screen and (min-width: 1440px) {
-    position: static;
     max-height: 55px;
-    margin-left: 400px;
-    margin-top: 330px;
+    transform: translate(-50%, 150px);
   }
 }
