--- a/src/styles.scss
+++ b/src/styles.scss
@@ -329,7 +329,7 @@ body {
   margin-bottom: 100px;
   background-image: url('./images/responsiveVersion/vectorsMobile.png');
   background-repeat: no-repeat;
-  background-position: 50% 50%, 0 0;
+  background-position: 50% 50%;
   background-color: rgb(62, 75, 100);
   height: 567px;
   &__Img {
@@ -366,9 +366,6 @@ body {
       letter-spacing: 0.05em;
       text-align: left;
     }
-    @media screen and (min-width: 1920px) {
-      margin-left: 400px;
-    }
   }
   @media screen and (min-width: 1440px) {
     top: -128px;
@@ -377,6 +374,9 @@ body {
     height: 600px;
     display: inline-block;
     z-index: 0;
+    background-image: url('./images/responsiveVersion/vectorsDesctop.png');
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
   }
 }
 .bg {
